# anytype-notify

./: .dockerignore  .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  License  README-ru.md  README.md  Readme.md  config.toml  docker-compose.yaml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
scripts/: nmap-scan.sh  socat.sh  start.sh
src/: config.rs  dotenv_vars.rs  main.rs
src/anytype/: mod.rs  parser.rs  sentinel.rs
src/anytype/entities/: api_response.rs  cache.rs  mod.rs  notification.rs
src/matrix/: client.rs  messages.rs  mod.rs
src/matrix/api/: auth.rs  room.rs
src/nmap/: scanner.rs
src/parser/: parser.rs
