[package]
name = "anytype-notify"
version = "0.3.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
config = "0.15.13"
dotenv = "0.15.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version= "1.17.0", features = ["v4"] }
